--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,42 @@
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: #3335;
-}
-
-header {
-    background-color: #333;
-}
-
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-}
-
-.logo img {
-    height: 40px; /* Ajuste conforme necessário */
-}
-
-.menu {
-    list-style: none;
-    margin: 0;
+header{
+    background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 78px;
     padding: 0;
-    display: flex;
 }
 
-.menu li {
-    margin-left: 20px; /* Espaçamento entre itens do menu */
+/* Estilo para a logo */
+.navbar-brand img {
+    height: 70px; /* Ajuste a altura da logo conforme necessário */
+    border-radius: 7%;
+    background-color: aliceblue;
 }
 
-.menu a {
-    text-decoration: none;
-    color: white;
-    font-size: 16px; /* Ajuste conforme necessário */
+/* Estilo para os itens do menu */
+.navbar-nav .nav-link {
+    color: #fff; /* Cor do texto dos itens do menu */
+    font-size: 16px; /* Tamanho da fonte */
+    padding: 10px 15px; /* Espaçamento interno dos itens do menu */
 }
 
-.menu a:hover {
-    text-decoration: underline;
+/* Estilo para os itens do menu ao passar o mouse */
+.navbar-nav .nav-link:hover {
+    color: #f1cd30; /* Cor do texto ao passar o mouse */
 }
+
+/* Estilo para o botão do menu em dispositivos móveis */
+.navbar-toggler {
+    border-color: #f1cd30; /* Cor da borda do botão */
+}
+
+.carousel-item img {
+    height: 540px;
+    width: auto;
+    padding: 0px 100px;
+   
+}
+
+.carousel-control-prev,
+        .carousel-control-next {
+            display: none;
+        }
